--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,43 @@
+.contenedor-principal {
+    margin-top: 50px;
+    text-align: center;
+    border: 3px solid black;
+    width: 250px;
+    height: 650px;
+    background-color:  black;
+    align-content: center;
+}
 
-/* 
+.light-contenedor{
+    padding: 10px;
+    display: inline-block;
+    align-content: center;
+    
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.light{
+    height: 200px;
+    width: 200px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin: auto;
+    margin-top: 7px;
+    text-align: center;
+    align-content: center;
+}
 
-*/
+.red {
+    background-color: red;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.green {
+    background-color: green;
+}
+
+.shine{
+    box-shadow: 0px 0px 40px yellow;
+}
